--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -1,8 +1,9 @@
 <h1>Blog</h1>
 
-<% @blog_posts.each do |post| %>
+<% @blog_posts.each do |blog_post| %>
   <div>
-    <h2><%= post.title %></h2>
-    <p><%= post.body %></p>
+    <%# blog_post_path(post.id) %>
+    <h2><%= link_to blog_post.title, blog_post %></h2>
+    <p><%= blog_post.body %></p>
   </div>
 <% end %>
