--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,9 @@
-<%= link_to 'Back', root_path %>
-
 <h1><%= @post.title %></h1>
 <p><%= @post.body %></p>
 
-<%= link_to "Edit this post", edit_post_path(@post) if user_signed_in? %>
-<%= button_to "Delete this post", @post, method: :delete, data: { turbo_confirm: "Are you sure?" } if user_signed_in? %>
+<% if user_signed_in? %>
+  <div class="flex gap-4 mt-6">
+    <%= link_to "Editar post", edit_post_path(@post), class: "no-underline flex items-center justify-center bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-6 rounded-lg shadow transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-yellow-400" %>
+    <%= button_to "Excluir post", @post, method: :delete, data: { turbo_confirm: "Tem certeza?" }, class: "flex items-center justify-center bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-6 rounded-lg shadow transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-red-500" %>
+  </div>
+<% end %>
