--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,6 +18,6 @@
   </div>
 
   <div>
-    <%= form.button "Salvar", class: "w-full bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 font-semibold transition-colors" %>
+    <%= form.button "save", class: "w-full bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 font-semibold transition-colors" %>
   </div>
 <% end %>
