--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <h1 class="">Blog Posts</h1>
 
 <% if user_signed_in? %>
-  <%= link_to "Novo Post", new_post_path, class: "no-underline inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded-lg shadow transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+  <%= link_to "new post", new_post_path, class: "no-underline inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded-lg shadow transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
 <% end %>
 
 <% @posts.each do |post| %>
