--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,7 @@
 
 <% if user_signed_in? %>
   <div class="flex gap-4 mt-6">
-    <%= link_to "Editar post", edit_post_path(@post), class: "no-underline flex items-center justify-center bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-6 rounded-lg shadow transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-yellow-400" %>
-    <%= button_to "Excluir post", @post, method: :delete, data: { turbo_confirm: "Tem certeza?" }, class: "flex items-center justify-center bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-6 rounded-lg shadow transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-red-500" %>
+    <%= link_to "edit post", edit_post_path(@post), class: "no-underline flex items-center justify-center bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-6 rounded-lg shadow transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-yellow-400" %>
+    <%= button_to "delete post", @post, method: :delete, data: { turbo_confirm: "Tem certeza?" }, class: "flex items-center justify-center bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-6 rounded-lg shadow transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-red-500" %>
   </div>
 <% end %>
