--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,6 +18,13 @@
   </div>
 
   <div>
+    <%= form.label :published_at, class: "block text-gray-700 font-semibold mb-2" %>
+    <div class="flex space-x-2">
+      <%= form.date_select :published_at, { order: [:year, :month, :day], include_blank: true }, class: "px-2 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+    </div>
+  </div>
+
+  <div>
     <%= form.button "save", class: "w-full bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 font-semibold transition-colors" %>
   </div>
 <% end %>
