--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="">Blog Posts</h1>
+<h1>Blog Posts</h1>
 
 <% if user_signed_in? %>
   <%= link_to "new post", new_post_path, class: "no-underline inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded-lg shadow transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
@@ -7,6 +7,13 @@
 <% @posts.each do |post| %>
   <div>
     <h3><%= link_to post.title, post_path(post) %></h3>
+    <% if post.draft? %>
+      <p class="text-gray-500">Draft</p>
+    <% elsif post.scheduled? %>
+      <p class="text-yellow-500">Scheduled: <%= post.published_at.strftime("%B %d, %Y") %></p>
+    <% else %>
+      <p>Published at: <%= post.published_at.strftime("%B %d, %Y") if post.published_at %></p>
+    <% end %>
     <p><%= post.body %></p>
   </div>
 <% end %>
