--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -14,7 +14,7 @@
 
   <div>
     <%= form.label :body, class: "block text-gray-700 font-semibold mb-2" %>
-    <%= form.text_area :body, rows: 6, class: "w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+    <%= form.rich_text_area :body, rows: 6, class: "w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" %>
   </div>
 
   <div>
