Upload Cover Images in Rails with ActiveStorage

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,4 +13,8 @@
  *= require_tree .
  *= require_self
  */
-@import "pagy.css";
+@import 'pagy.css';
+
+.trix-content p {
+  margin-bottom: 1rem;
+}
