--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -7,6 +7,18 @@
     </div>
   <% end %>
 
+
+  <div>
+    <% if @post.cover_image.present? %>
+      <%= image_tag @post.cover_image %>
+      <%= link_to "Remove cover image", post_cover_image_path(@post), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
+    <% else %>
+      <%= form.label :cover_image, class: "block text-gray-700 font-semibold mb-2" %>
+      <%= form.file_field :cover_image, class: "w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+  <% end %>
+
+  </div>
+
   <div>
     <%= form.label :title, class: "block text-gray-700 font-semibold mb-2" %>
     <%= form.text_field :title, class: "w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" %>
