--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,13 +7,16 @@
 <% @posts.each do |post| %>
   <div class="mb-6">
     <h3><%= link_to post.title, post_path(post) %></h3>
-    <% if post.draft? %>
-      <p class="text-gray-500">Draft</p>
-    <% elsif post.scheduled? %>
-      <p class="text-yellow-500">Scheduled: <%= post.published_at.strftime("%B %d, %Y") %></p>
-    <% else %>
-      Published at: <%= post.published_at.strftime("%B %d, %Y") if post.published_at %></p>
-    <% end %>
+    <div class="">
+      <% if post.draft? %>
+        <p class="text-gray-500">Draft
+      <% elsif post.scheduled? %>
+        <p class="text-yellow-500">Scheduled: <%= post.published_at.strftime("%B %d, %Y") %>
+      <% else %>
+        <p><%= post.published_at.strftime("%B %d, %Y") if post.published_at %>
+      <% end %>
+     | <%= post.author.email %></p>
+    </div>
     <div class="text-gray-700">
       <%= truncate(strip_tags(post.body.to_s), length: 200, separator: ' ') %>
     </div>
